<!--
	BioAssay Template: Ant Build Script
	
	(c) 2015-2018 Collaborative Drug Discovery Inc.
	
	All rights reserved
	
	http://collaborativedrug.com
-->

<project name="BioAssayTemplate" default="pkg" basedir=".">

	<description>Collaborative Drug Discovery</description>

	<property name="pkg" location="pkg" />
	<property file="${basedir}/build.properties" />
	<condition property="requires-jdk1.8">
		<equals arg1="${jdk.version}" arg2="jdk1.8"/>
	</condition>
	<condition property="requires-jdk11">
		<equals arg1="${jdk.version}" arg2="jdk11"/>
	</condition>

	<path id="project.class.path">
		<fileset dir="lib">
			<include name="*.jar" />
		</fileset>
	</path>

	<target name="init" depends="check">
		<tstamp />
		<mkdir dir="bin" />
		<mkdir dir="pkg" />
	</target>

	<target name="build" depends="init" description="build the source">
		<antcall target="build-jdk11"/>
		<antcall target="build-jdk1.8"/>
		<copy file="cfg/log4j.properties" todir="bin" />
	</target>
	
	<target name="build-jdk11" if="requires-jdk11">
		<antcall target="build-javac">
			<param name="java.version" value="11"/>
			<param name="compilerarg" value="--module-path ${jfx.module.home} --add-modules=javafx.controls"/>
		</antcall>
	</target>

	<target name="build-jdk1.8" if="requires-jdk1.8">
		<antcall target="build-javac">
			<param name="java.version" value="1.8"/>
			<param name="compilerarg" value=""/> <!-- intentionally empty -->
		</antcall>
	</target>

	<target name="build-javac">
		<javac srcdir="src" destdir="bin" debug="on" encoding="8859_1" listfiles="on" includeantruntime="false" source="${java.version}" target="${java.version}">
			<compilerarg line="${compilerarg}"/>
			<classpath refid="project.class.path"/>
		</javac>
	</target>

	<target name="pkg" depends="build" description="generate the packages">
		<jar jarfile="pkg/BioAssayTemplate.jar" basedir="bin">
			<manifest>
				<attribute name="Main-Class" value="com.cdd.bao.Main" />
			</manifest>
			<fileset dir="." includes="data/ontology/**" />
			<fileset dir="." includes="images/*.png" />
			<zipgroupfileset dir="lib" includes="*.jar" />
		</jar>
	</target>

	<target name="buildAPI" depends="init" description="build the source (API only)">
		<antcall target="buildAPI-jdk11"/>
		<antcall target="buildAPI-jdk1.8"/>
		<copy file="cfg/log4j.properties" todir="bin" />
	</target>

	<target name="buildAPI-jdk11" if="requires-jdk11">
		<antcall target="build-javac">
			<param name="java.version" value="11"/>
			<param name="compilerarg" value="--module-path ${jfx.module.home} --add-modules=javafx.controls"/>
		</antcall>
	</target>

	<target name="buildAPI-jdk1.8" if="requires-jdk1.8">
		<antcall target="build-javac">
			<param name="java.version" value="1.8"/>
			<param name="compilerarg" value=""/> <!-- intentionally empty -->
		</antcall>
	</target>

	<target name="buildAPI-javac">
		<javac srcdir="src" destdir="bin" debug="on" encoding="8859_1" listfiles="on" includeantruntime="false" source="${java.version}" target="${java.version}">
			<compilerarg line="${compilerarg}"/>
			<exclude name="com/cdd/bao/editor/**" />
			<exclude name="com/cdd/bao/importer/**" />
			<exclude name="com/cdd/bao/*.java" />
			<exclude name="com/cdd/bao/util/Lineup.java" />
			<exclude name="com/cdd/bao/util/RowLine.java" />
			<exclude name="com/cdd/bao/util/URIRowLine.java" />
			<exclude name="com/cdd/bao/util/UtilGUI.java" />
			<classpath refid="project.class.path" />
		</javac>
	</target>

	<target name="pkgAPI" depends="buildAPI" description="generate the package without the GUI">
		<jar jarfile="pkg/BioAssayTemplateAPI.jar">
			<fileset dir="bin">
				<include name="com/cdd/bao/template/**" />
				<include name="com/cdd/bao/util/Util.class" />
				<include name="com/cdd/bao/validator/**" />
				<include name="org/json/**" />
			</fileset>
			<zipgroupfileset dir="lib" includes="*.jar" />
		</jar>
	</target>

	<target name="clean" description="clean up">
		<delete dir="bin" />
		<delete dir="build" />
		<delete dir="pkg" />
	</target>

	<!-- checkstyle configuration -->
	<property name="check.config" location="check/bax_checks.xml" />
	<path id="path.check">
		<pathelement location="check/checkstyle-patch.jar" />
		<pathelement location="check/checkstyle-8.4-all.jar" />
	</path>

	<path id="project.sourcepath">
		<fileset dir="src/com">
			<include name="**/*" />
		</fileset>
	</path>
	<pathconvert property="classpath.check" refid="path.check" />

	<target name="check">
		<taskdef name="bax_checkstyle" classname="com.puppycrawl.tools.checkstyle.ant.CheckstyleAntTask" classpath="${classpath.check}" />
		<!-- Use failOnViolation="false" to make style violations warning only -->
		<bax_checkstyle config="${check.config}">
			<path refid="project.sourcepath" />
			<classpath path="${classpath.check}" />
			<formatter type="plain" />
		</bax_checkstyle>
	</target>

	<!-- unit tests -->

	<property name="test.src.dir" value="test" />
	<property name="test.build.dir" value="build/test" />
	<property name="main.build.dir" value="bin" />

	<!-- These are the jar files required to run the tests -->
	<path id="classpath.main">
		<pathelement location="lib/commons-lang3-3.3.2.jar" />
		<pathelement location="lib/jena-core-3.0.0.jar" />
	</path>

	<path id="classpath.test">
		<pathelement location="lib/junit-4.12.jar" />
		<pathelement location="lib/hamcrest-core-1.3.jar" />
		<pathelement location="${main.build.dir}" />
	</path>

	<target name="test-compile" depends="build">
		<mkdir dir="${test.build.dir}" />
		<antcall target="test-compile-jdk11"/>
		<antcall target="test-compile-jdk1.8"/>
		<copy todir="${test.build.dir}">
			<fileset dir="test">
				<include name="testData/**" />
				<include name="mockito-extensions/**" />
			</fileset>
		</copy>
	</target>

	<target name="test-compile-jdk11" if="requires-jdk11">
		<antcall target="test-compile-javac">
			<param name="java.version" value="11"/>
			<param name="compilerarg" value="--module-path ${jfx.module.home} --add-modules=javafx.controls"/>
		</antcall>
	</target>

	<target name="test-compile-jdk1.8" if="requires-jdk1.8">
		<antcall target="test-compile-javac">
			<param name="java.version" value="1.8"/>
			<param name="compilerarg" value=""/> <!-- intentionally empty -->
		</antcall>
	</target>

	<target name="test-compile-javac">
		<javac srcdir="${test.src.dir}" destdir="${test.build.dir}" includeantruntime="false" debug="on" source="${java.version}" target="${java.version}">
			<compilerarg line="${compilerarg}"/>
			<classpath>
				<path refid="classpath.main" />
				<path refid="classpath.test" />
			</classpath>
		</javac>
	</target>

	<target name="junit" depends="test-compile" description="run junit">
		<junit printsummary="on" showoutput="yes" haltonfailure="yes" fork="false" forkmode="once" reloading="false" maxmemory="1024m">
			<classpath>
				<path refid="project.class.path" />
				<path refid="classpath.test" />
				<pathelement location="${test.build.dir}" />
			</classpath>
			<formatter type="brief" usefile="false" />
			<batchtest>
				<fileset dir="${test.src.dir}" includes="**/*Test.java" />
			</batchtest>
		</junit>
	</target>

</project>
